[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Assets/projectileOutter.png" type="Texture" id=2]
[ext_resource path="res://Assets/projectileCore.png" type="Texture" id=3]
[ext_resource path="res://Assets/light.png" type="Texture" id=4]

[node name="Projectile" type="Area2D"]

z_index = 1
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

[node name="SpriteOutter" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="SpriteCore" type="Sprite" parent="." index="2"]

texture = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="3"]

rect = Rect2( -10, -10, 20, 20 )

[node name="Light2D" type="Light2D" parent="." index="4"]

enabled = true
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[connection signal="area_entered" from="." to="." method="_on_Projectile_area_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


